--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,7 +9,25 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='js/10-for-In-Of.js'></script>
 </head>
+
 <body>
-    
+
+    <ol>
+        <li><a href="apis/01-webStorage.html">Web Storage</a></li>
+        <li><a href="apis/02-dragDrop.html">Drag & Drop I</a></li>
+        <li><a href="apis/03-dragDrop.html">Drag & Drop II</a></li>
+        <li><a href="apis/04-apiFile.html">Api File</a></li>
+        <li><a href="apis/05-apiFileProgressBar.html">Api File Bar Progress</a></li>
+        <li><a href="apis/06-apiFileDragDrop.html">Api File with Drag & Drop</a></li>
+        <li><a href="apis/07-indexDBCRUD.html">IndexedDB CRUD</a></li>
+        <li><a href="apis/08-visibilityChange.html">Visivility Change</a></li>
+        <li><a href="apis/09-onlineOffline.html">API Online / Offline</a></li>
+        <li><a href="apis/10-intersectionObserver.html">Intersection Observer</a></li>
+        <li><a href="apis/11-intersectionObserver.html">Intersection Observer - LazyLoad</a></li>
+        <li><a href="apis/12-getLocation.html">Get Location</a></li>
+        <li><a href="apis/13-matchMedia.html">Match Media</a></li>
+    </ol>
+
 </body>
+
 </html>
