exercises and babel

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JavaScript</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='js/10-for-In-Of.js'></script>
+    
 </head>
 
 <body>
@@ -28,6 +28,9 @@
         <li><a href="apis/13-matchMedia.html">Match Media</a></li>
     </ol>
 
+    <!-- for 24 -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src='js/24-destructuring.js'></script>
 </body>
 
 </html>
